--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -32,12 +32,11 @@
         app:layout_constraintTop_toTopOf="@+id/logo_imageview" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo_imageview"
-        android:background="@drawable/ic_streets_back">
+        app:layout_constraintTop_toBottomOf="@id/logo_imageview">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_right"
@@ -61,8 +60,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:elevation="5dp"
-            android:outlineProvider="bounds"/>
+            android:outlineProvider="bounds" />
 
         <EditText
             android:id="@+id/edit_location_main"
@@ -74,17 +72,8 @@
             app:layout_constraintEnd_toEndOf="@id/guideline_right"
             app:layout_constraintStart_toStartOf="@id/guideline_left"
             app:layout_constraintTop_toTopOf="@id/streets_imageview"
-            app:layout_constraintBottom_toBottomOf="@id/streets_imageview"
-            android:elevation="5dp"/>
+            app:layout_constraintBottom_toBottomOf="@id/streets_imageview"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
