--- a/app/src/main/res/layout/main_recycler_item.xml
+++ b/app/src/main/res/layout/main_recycler_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:padding="8dp"
     android:background="@drawable/ic_rec_main_item">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/inner_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:background="@drawable/ic_rec_main_inner_item">
+        android:background="@drawable/ic_rec_main_inner_item"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/elem_title"
@@ -30,10 +32,10 @@
             android:id="@+id/fab_add"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            app:layout_constraintTop_toTopOf="@id/elem_title"
-            app:layout_constraintTop_toBottomOf="@id/elem_title"
+            android:src="@drawable/ic_fab"
             app:layout_constraintEnd_toEndOf="@id/elem_title"
-            android:src="@drawable/ic_fab">
+            app:layout_constraintTop_toBottomOf="@id/elem_title"
+            app:layout_constraintTop_toTopOf="@id/elem_title">
 
         </ImageButton>
 
@@ -45,20 +47,22 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/elem_title" />
-
-        <Button
-            android:id="@+id/delete_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@string/btn_delete_text"
-            android:background="@drawable/delete_btn">
-        </Button>
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/elem_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/delete_btn"
+        android:text="@string/btn_delete_text"
+        app:layout_constraintBottom_toBottomOf="@id/inner_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inner_layout">
+
+    </Button>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
