--- a/app/src/main/res/drawable/bg_inner_rec_imageview.xml
+++ b/app/src/main/res/drawable/bg_inner_rec_imageview.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:tint="@color/pink_to_delete_btn">
+    android:tint="@color/white">
 
     <corners android:radius="15dp" />
 </shape>
